--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "nextjs-starter",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next dev",
-    "turbo": "next dev --turbo",
-    "build": "next build",
+    "dev": "prisma generate && next dev",
+    "turbo": "prisma generate && next dev --turbo",
+    "build": "prisma generate && next build",
     "build:analyze": "cross-env ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint",
+    "prisma": "prisma generate && prisma db push",
     "format": "prettier --write --list-different .",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit"
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.0.4",
+    "@prisma/client": "^5.7.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -30,6 +32,7 @@
     "postcss": "^8",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
+    "prisma": "^5.7.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   },
