--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:analyze": "cross-env ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "format": "prettier --write --list-different .",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit"
