--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DATABASE_URL=""
-AUTH_SECRET= # Linux: `openssl rand -hex 32` or go to https://generate-secret.vercel.app/32
+
+NEXTAUTH_SECRET= # Linux: `openssl rand -hex 32` or go to https://generate-secret.vercel.app/32
 NEXTAUTH_URL=http://localhost:3000 # If you are using Vercel, you don't need to add this variable to production
 
 GOOGLE_CLIENT_ID=
