--- a/package.json
+++ b/package.json
@@ -14,15 +14,14 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "eslint-config-prettier": "^9.1.0",
     "next": "14.0.4",
-    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@next-auth/prisma-adapter": "canary",
     "@next/bundle-analyzer": "^14.0.4",
     "@prisma/client": "^5.7.1",
     "@types/node": "^20",
