--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "eslint-config-prettier": "^9.1.0",
     "next": "14.0.4",
+    "next-auth": "4.22.1",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18"
